fix: more spacing

--- a/apps/cv/src/app.css
+++ b/apps/cv/src/app.css
@@ -55,14 +55,14 @@ h1 {
 
 h2 {
   font-size: 2.2rem;
-  margin-top: 5rem;
+  margin-top: 8rem;
   margin-bottom: 0;
   text-transform: uppercase;
 }
 
 h3 {
   font-size: 1.8rem;
-  margin-top: 2rem;
+  margin-top: 4rem;
   margin-bottom: 0;
 }
 
